--- a/assets/less/background.less
+++ b/assets/less/background.less
@@ -1,3 +1,8 @@
 body {
   #gradient > .vertical(#1C385F, #1C385E, 100%, 0%);
+  
+  //background: url("../img/bg.jpg");
+  //background-size: cover;
+  //background-attachment: fixed;
+  //background-position: center center;
 }
