--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -17,18 +17,24 @@
 //STYLES
 @import "background";
 
-
-@border-color-outer: #4D91AF;
-@border-color-inner: #C3C3C3;
-
 body, html {
   min-height: 100%;
   color: #fff;
 }
 
+.btn-main {
+  background: @mainActionButton_bg;
+  color: @mainActionButton_color;
+  border-color: @mainActionButton_border_color;
+  padding: 5px 50px;
+  text-transform: uppercase;
+  font-size: @mainActionButton_font_size;
+}
+
 .wrapperOuter{
   .container;
-  padding-top: 20px;
+  padding-top: @grid-gutter-width;
+  padding-bottom: @grid-gutter-width;
 }
 
 .wrapperInner {
@@ -49,36 +55,100 @@ body, html {
     position: absolute;
     top: 0;
     right: 0;
-
-    padding: 10px 30px;
-
-    text-transform: uppercase;
   }
 
 }
 
-.main {
+.content {
   .make-xs-column(12);
-  border: 1px solid @border-color-outer;
+  border: 1px solid @content_border_color;
   border-radius: 10px;
-
-  form {
-    option:first-of-type {
-      color:red;
-    }
-  }
+  padding: @grid-gutter-width/2;
 }
 
-.leftColumn, .rightColumn {
+.column {
   .make-sm-column(6);
   .make-xs-column(12);
+  //padding-top: @grid-gutter-width;
 }
 
-.innerSection {
+.subSection {
   .make-xs-column(12);
-  border: 1px solid red;
+  border: 1px solid @innerSection_border_color;
+  border-radius: 10px;
+  margin-bottom: @grid-gutter-width/2;
 }
 
-.form-group:hover {
-  background: red;
+.subSectionTitle {
+  .make-xs-column(12);
+
+  p {
+    padding: 0;
+    font-weight: bold;
+    margin: 0 0 @grid-gutter-width/6 0;
+  }
 }
+
+.repeatableItem {
+  .make-xs-column(12);
+  padding-top: @grid-gutter-width/2;
+
+  &:not(:first-of-type) {
+    margin-top: @grid-gutter-width/2;
+
+    &::before {
+      content: "";
+      display: block;
+      height: 1px;
+      background: @repeatableItem_border_color;
+      position: absolute;
+      top: 0;
+      left: @grid-gutter-width/2;
+      right: @grid-gutter-width/2;
+
+  }
+
+  }
+}
+
+.repeatableAddItem {
+  padding-top: 15px;
+
+  .btn {
+    position: relative;
+    background: none;
+    border-radius: 50%;
+    border-width: 2px;
+    color: @brand-primary;
+    line-height: 1;
+    .square(45px);
+
+    &::before {
+      content: "+";
+      font-size: 60px;
+      position: absolute;
+      top:50%;
+      left: 50%;
+      .translate(-50%,-50%);
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+}
+
+.fullWidth {
+  .make-xs-column(12);
+}
+
+.bootstrap-select{
+  .filter-option {
+    color: @input_placeholder_color;
+  }
+}
+
+.datepicker table tr td, .datepicker table tr th {color: @bgColor;}
+
+.datepicker table tr td.old, .datepicker table tr td.new {color: @input_placeholder_color;}
