--- a/assets/less/themeVariables.less
+++ b/assets/less/themeVariables.less
@@ -1,5 +1,5 @@
 @bgColor: #1C385F;
-
+@text_color: #fff;
 
 @innerSection_border_color: #C3C3C3;
 
@@ -19,3 +19,28 @@
 
 @content_border_color: #4D91AF;
 @border-color-inner: #C3C3C3;
+
+
+//pagination
+@pagination_color:                     @link-color;
+@pagination_bg:                        @theme_color_button_bg;
+@pagination_border:                    @theme_color_light;
+
+@pagination_hover-color:               @link-hover-color;
+@pagination_hover-bg:                  @gray-lighter;
+@pagination_hover-border:              #ddd;
+
+@pagination_active-color:              #fff;
+@pagination_active-bg:                 @theme_color_light;
+@pagination_active-border:             @theme_color_light;
+
+@pagination_disabled-color:            #fff;
+@pagination_disabled-bg:               @theme_color_light;
+@pagination_disabled-border:           @theme_color_light;
+
+//tables
+@table_border_color: #4D91AF;
+
+//theme coloring:
+@theme_color_light: #4D91AF;
+@theme_color_button_bg: #22509E;
