--- a/assets/less/scaffolding.less
+++ b/assets/less/scaffolding.less
@@ -25,6 +25,8 @@ body > .container {
   border: 1px solid @content_border_color;
   border-radius: 10px;
   padding: @grid-gutter-width/2;
+
+  background: fade(darken(@bgColor,3%),70%);
   
   @media @xs {
     margin-top: 60px;
