domba - jumbotron, buttons, inputs

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,25 +1,34 @@
+//theme variables
 @import "my-variables";
 
-
+//bootstrap
 @import "variables";
 @import "bootstrap";
 
+//slick slider
+@import "../components/slick-carousel/slick/slick";
+@import "slick-theme";
+
 @import "mixins";
 
+//font awesome
 //@import "fa-variables";
 //@import "font-awesome";
-//
-//@import "slick-theme";
-//@import "slick";
 
-
+//UI elements
+@import "ui-elements/inputs";
+@import "ui-elements/buttons";
+@import "ui-elements/animations";
 @import "fonts";
 
-@import "animations";
-
+//Sections
 @import "cards";
 @import "header";
+@import "main-menu";
 @import "navbar";
+@import "jumbotron";
+@import "commercials";
+@import "footer";
 
 
 
