--- a/app/less/navbar.less
+++ b/app/less/navbar.less
@@ -8,7 +8,7 @@
   background: @primary-color;
   z-index: 2000;
 
-  margin-top: 30px;
+  //margin-top: 30px;
 
 
   .icon-bar {
@@ -67,20 +67,3 @@
 
 }
 
-#main-menu {
-  position: fixed;
-  background: @primary-color;
-  z-index: 1500;
-  top: 0;
-  left: 0;
-  max-height: 0;
-  width: 100%;
-  height: 400px;
-  .transitions(max-height);
-  overflow: hidden;
-
-
-  &.active {
-    max-height: 400px;
-  }
-}
