--- a/app/less/jumbotron.less
+++ b/app/less/jumbotron.less
@@ -12,6 +12,11 @@
 
   }
 
+  @media @xs {
+    padding-top: 500px;
+
+  }
+
   .search-area {
     background: rgba(0,0,0,0.2);
     padding: 15px 0;
