--- a/app/less/main.less
+++ b/app/less/main.less
@@ -2,14 +2,17 @@
 @import "my-variables";
 
 //bootstrap
-@import "variables";
-@import "bootstrap";
+@import "components-variables/bootstrap";
 
 //slick slider
 @import "../components/slick-carousel/slick/slick";
 @import "slick-theme";
 
 @import "mixins";
+
+//bootstrap slider
+@import "components-variables/bootstrap-slider";
+
 
 //bootstrap select
 @import "../components/bootstrap-select/less/bootstrap-select";
