--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -53,10 +53,10 @@
   .row;
 }
 
-.btn-lg {
-  border-width: 5px;
-}
-
-.form-control {
-  border-width: 5px;
-}
+//.btn-lg {
+//  border-width: 5px;
+//}
+//
+//.form-control {
+//  border-width: 5px;
+//}
