--- a/app/less/main-menu.less
+++ b/app/less/main-menu.less
@@ -4,11 +4,9 @@
   z-index: 1500;
   top: 0;
   left: 0;
-  //max-height: 0;
   width: 100%;
-  //height: 400px;
-  .transitions(all);
-  overflow: hidden;
+  .transitions;
+  overflow: auto;
 
   padding-top: 90px;
 
