--- a/app/less/navbar.less
+++ b/app/less/navbar.less
@@ -2,13 +2,15 @@
   &:extend(.transitions);
   position: relative;
   display: inline-block;
-  width: 40px;
+  width: 110px;
   height: 40px;
   border: 0;
   background: @primary-color;
   z-index: 2000;
 
-  //margin-top: 30px;
+  @media @xs {
+    width: 40px;
+  }
 
 
   .icon-bar {
@@ -70,6 +72,11 @@
     position: absolute;
     top: 0;
     left: 50px;
+
+    @media @xs {
+      display: none;
+    }
+
   }
 
   .opened {
