domba - cta, featured, partners, slick slider introduced

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -5,13 +5,15 @@
 @import "components-variables/bootstrap";
 
 //slick slider
-@import "../components/slick-carousel/slick/slick";
-@import "slick-theme";
+@import "components-variables/slick-theme";
+@import "components-variables/slick";
+
 
 @import "mixins";
 
 //bootstrap slider
 @import "components-variables/bootstrap-slider";
+
 
 
 //bootstrap select
@@ -33,8 +35,10 @@
 @import "main-menu";
 @import "navbar";
 @import "jumbotron";
-@import "commercials";
+@import "cta";
+@import "partners";
 @import "footer";
+@import "featured";
 
 body {
   overflow-x: hidden;
