--- a/app/less/fonts.less
+++ b/app/less/fonts.less
@@ -1,7 +1,7 @@
 
-@import 'https://fonts.googleapis.com/css?family=Roboto';
-@import url(https://fonts.googleapis.com/css?family=Lobster);
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:900&subset=latin,latin-ext);
+//@import url('https://f/onts.googleapis.com/css?family=Roboto');
+//@import url('https://fonts.googleapis.com/css?family=Lobster');
+//@import url('https://fonts.googleapis.com/css?family=Titillium+Web:900&subset=latin,latin-ext');
 
 //font-family: 'Roboto', sans-serif;
 //font-family: 'Lobster', cursive;
