--- a/app/less/jumbotron.less
+++ b/app/less/jumbotron.less
@@ -4,8 +4,7 @@
   background-attachment: fixed;
   -webkit-background-size: cover;
   background-size: cover;
-
-  //height: 600px;
+  padding-bottom: @grid-gutter-width;
 
   @media @lg {
     padding-top: 200px;
