domba - buttons with icons

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -20,8 +20,7 @@
 @import "../components/bootstrap-select/less/bootstrap-select";
 
 //font awesome
-//@import "fa-variables";
-//@import "font-awesome";
+@import "components-variables/font-awesome";
 
 //UI elements
 @import "ui-elements/inputs";
