domba - header logo (size structure), main.js (intro animations),

--- a/app/less/cta.less
+++ b/app/less/cta.less
@@ -1,8 +1,11 @@
+
 .cta {
   padding: @grid-gutter-width/2 0;
   background: @cta-bg;
 
-  .message {
+  .cta-message {
+    .delayed(@cta-time-delay-offset + 0ms);
+
     margin-bottom: @grid-gutter-width/2;
     p {
       color: @cta-message-color;
@@ -19,6 +22,8 @@
   }
 
   .cta-btn {
+    .delayed(@cta-time-delay-offset + 200ms);
+
     .make-xs-column(12);
     .make-sm-column(6);
 
