--- a/app/less/header.less
+++ b/app/less/header.less
@@ -34,11 +34,28 @@
       width: 200px;
       height: 76px;
     }
+
     @media @xs {
       top: 5px;
-      width: 100px;
+      width: 80px;
       height: 35px;
     }
+    @media @sm {
+      top: 5px;
+      width: 80px;
+      height: 35px;
+    }
+    @media @md {
+      top: 5px;
+      width: 80px;
+      height: 35px;
+    }
+    @media @lg {
+      top: 5px;
+      width: 80px;
+      height: 35px;
+    }
+
 
     .fil0 {fill: white;}
     .fil1 {fill: white;}
@@ -58,6 +75,18 @@
   .translate(-50%,0);
 
   @media @xs {
+    width: 100px;
+    height: 35px;
+  }
+  @media @sm {
+    width: 100px;
+    height: 35px;
+  }
+  @media @md {
+    width: 100px;
+    height: 35px;
+  }
+  @media @lg {
     width: 100px;
     height: 35px;
   }
