--- a/app/less/ui-elements/buttons.less
+++ b/app/less/ui-elements/buttons.less
@@ -13,6 +13,6 @@
     font-family: FontAwesome;
     font-size: inherit;
     margin-right: 10px;
-    content: @fa-var-edit;
+    content: @fa-var-pencil;
   }
 }
